fix: footer style overflow

--- a/src/theme/Footer/styles.module.scss
+++ b/src/theme/Footer/styles.module.scss
@@ -9,7 +9,9 @@
 .center {
     max-width: var(--ifm-container-width);
     width: 100%;
-    margin-bottom: 48px;
+    // margin-bottom: 48px;
+    padding: 4.5rem 3rem;
+    margin: 0 auto;
 }
 
 .content {
